fixing wrapping for definitions list

--- a/frontend/styl/style.styl
+++ b/frontend/styl/style.styl
@@ -301,7 +301,7 @@ footer
 
     .base
     .definition
-      display inline-block
+      display inline
 
     .base
       font-weight bolder
